--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     </select>
     <!-- <p class="loader">Loading data, please wait...</p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p> -->
-    <div class="cat-info">
+    <div class="cat-info hidden" >
      
     </div>
     
