--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./common.css" />
   </head>
   <body>
-    <select class="breed-select">
+    
+    <select class="breed-select hidden">
       
     </select>
+    <span class="loadOne loader"></span>
     <!-- <p class="loader">Loading data, please wait...</p>
     <p class="error">Oops! Something went wrong! Try reloading the page!</p> -->
     <div class="cat-info hidden" >
